# substio_app

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yaml  dev.Dockerfile  pyproject.toml  pytest.ini  restore.sh  substio.http
.github/workflows/: manual-tests.yml
app/: .env.sample  config.py  db.py  dependencies.py  exceptions.py  main.py
app/common/: auth.py  text_utils.py
app/common/email/: EmailNotifierBase.py  MailerSendNotifier.py  factory.py
app/common/slack/: FakeSlackNotifier.py  SlackNotifier.py  (+3 more)
app/controller/: offers.py  places.py
app/core/: auth.py  config.py  dependencies.py  exceptions.py  protocols.py
app/database/: db.py  protocols.py
app/models/: models.py
app/repositories/: city_repo.py  generics.py  legal_role_repo.py  offer_repo.py  place_repo.py
app/repository/: CityRepo.py  PlaceRepo.py  generics.py
app/schemas/: requests.py
app/service/: CityService.py  EmailValidationService.py  OfferService.py  PlaceService.py
app/services/: city_service.py  email_validation_service.py  offer_service.py  place_service.py
app/utils/: email_utils.py  timestamp_utils.py  validators.py
migrations/: env.py
migrations/versions/: 2025_07_22_1237-2dbc4a162767_create_cities_table.py  2025_07_22_1438-2548fc10b15b_create_places_table.py  2025_07_22_1507-9ef231da15fa_create_legalsubstitutionoffers_table.py  2025_07_22_1507-9ef231da15fa_create_offers_table.py  2025_07_25_1312-73a219a8e6b8_create_legalroles_table.py  2026_03_13_1555-5eb23b10c9d9_add_indexes_and_unique_constraints.py
tests/: conftest.py  test_offers_tc.py
tests/api/: test_offer_email_flow_tc.py  test_offers_controller_tc.py  test_places_controller_tc.py
tests/common/: test_auth.py  test_email.py  test_slack.py  test_text_utils.py
tests/core/: test_auth.py
tests/infrastructure/: test_email.py  test_slack.py
tests/integration/: test_offers_controller_tc.py  test_places_controller_tc.py
tests/repositories/: test_city_repo.py  test_city_repo_tc.py  test_generic_repo.py  test_generic_repo_tc.py  test_place_repo.py  test_place_repo_tc.py
tests/service/: test_city_service.py  test_email_validation_service.py  test_offer_date_handler.py  test_offer_import_service.py  test_offer_location_mapper.py  test_offer_service.py  test_place_mappers.py  test_place_service.py
tests/services/: test_city_service.py  test_email_validation_service.py  test_offer_date_handler.py  test_offer_import_service.py  test_offer_location_mapper.py  test_offer_service.py  test_place_mappers.py  test_place_service.py
tests/unit/: test_email_utils.py  test_timestamp_utils.py  test_validators_new.py
tests/utils/: test_email_utils.py  test_helpers.py  test_text_utils.py  test_timestamp_utils.py
tools/: basic_offers.py  offers.py  parser.py
utils/: courts.py  facility_data.py  offers.py  uploader.py
(+49 files in other folders)
