[project]
name = "substio-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "openai>=1.97.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
    "sentry-sdk[fastapi]>=2.35.0",
    "sqlalchemy>=2.0.41",
    "unidecode>=1.4.0",
    "whenever>=0.8.8",
]

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.13.4",
    "datefinder>=0.7.3",
    "dateparser>=1.2.2",
    "geopy>=2.4.1",
    "langcodes>=3.5.0",
    "lxml>=6.0.0",
    "overpy>=0.7",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "testcontainers>=4.12.0",
]

[tool.ruff.lint]
preview = true
select = [
    "FAST",
    "ASYNC",
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    'Q',
    'RUF100',
    'C90', # is too complex ({complexity} > {max_complexity})
    'UP', #  upgrade syntax for newer versions of the language.
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff]
line-length = 140
target-version = "py312"
exclude = ["migrations"]

[tool.ruff.format]
#quote-style = "single"
#indent-style = "tab"

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = ["fastapi", "pydantic", "starlette", "sqlalchemy"]
